--- a/ecosystem/node-checker/Cargo.toml
+++ b/ecosystem/node-checker/Cargo.toml
@@ -17,11 +17,10 @@ env_logger = "0.9"
 futures = "0.3.21"
 log = "0.4"
 once_cell = "1.10.0"
-reqwest = { version = "0.11.10", features = ["json", "cookies"] }
-reqwest-middleware = { version = "0.1.6" }
-reqwest-retry = { version = "0.1.5" }
 poem = { git = "https://github.com/banool/poem", branch = "add_yaml_spec" }
 poem-openapi = { git = "https://github.com/banool/poem", features = ["swagger-ui", "rapidoc", "redoc"], branch = "add_yaml_spec"}
+reqwest = "0.11.10"
+thiserror = "1.0.31"
 tokio = { version = "1.18.2", features = ["full"] }
 url = "2.2.2"
 
