--- a/ecosystem/node-checker/Cargo.toml
+++ b/ecosystem/node-checker/Cargo.toml
@@ -19,6 +19,7 @@ log = "0.4"
 once_cell = "1.10.0"
 poem = { git = "https://github.com/banool/poem", branch = "add_yaml_spec" }
 poem-openapi = { git = "https://github.com/banool/poem", features = ["swagger-ui", "rapidoc", "redoc"], branch = "add_yaml_spec"}
+prometheus-parse = "0.2.2"
 reqwest = "0.11.10"
 thiserror = "1.0.31"
 tokio = { version = "1.18.2", features = ["full"] }
