Cut back to main poem repo

--- a/ecosystem/node-checker/Cargo.toml
+++ b/ecosystem/node-checker/Cargo.toml
@@ -18,8 +18,8 @@ futures = "0.3.21"
 log = "0.4"
 once_cell = "1.10.0"
 humantime = "2.1.0"
-poem = { git = "https://github.com/banool/poem", features = ["anyhow"], branch = "add_yaml_spec" }
-poem-openapi = { git = "https://github.com/banool/poem", features = ["swagger-ui", "rapidoc", "redoc"], branch = "add_yaml_spec"}
+poem = { git = "https://github.com/poem-web/poem", features = ["anyhow"], rev = "67cfa24f999d30d5008faaf604e64ad1b282179f" }
+poem-openapi = { git = "https://github.com/poem-web/poem", features = ["swagger-ui"], rev = "67cfa24f999d30d5008faaf604e64ad1b282179f"}
 prometheus-parse = "0.2.2"
 lazy_static = "1.4.0"
 reqwest = "0.11.10"
