--- a/ecosystem/node-checker/Cargo.toml
+++ b/ecosystem/node-checker/Cargo.toml
@@ -13,7 +13,7 @@ publish = false
 anyhow = "1.0.57"
 async-trait = "0.1.53"
 clap = "3.1.17"
-env_logger = "0.9"
+env_logger = "0.8.4"
 futures = "0.3.21"
 log = "0.4"
 once_cell = "1.10.0"
@@ -21,13 +21,12 @@ humantime = "2.1.0"
 poem = { git = "https://github.com/poem-web/poem", features = ["anyhow"], rev = "67cfa24f999d30d5008faaf604e64ad1b282179f" }
 poem-openapi = { git = "https://github.com/poem-web/poem", features = ["swagger-ui"], rev = "67cfa24f999d30d5008faaf604e64ad1b282179f"}
 prometheus-parse = "0.2.2"
-lazy_static = "1.4.0"
 reqwest = "0.11.10"
 thiserror = "1.0.31"
 tokio = { version = "1.18.2", features = ["full"] }
 url = "2.2.2"
 
-# These deps are commented out while I wait for some PRs to get merged into poem.
+# These deps are commented out while I wait for some PRs I made to get deployed.
 # poem = "1.3.30"
 # poem-openapi = { version = "2.0.0", features = ["swagger-ui"]}
 
